# agentic-patterns

./: .dockerignore  .gitignore  AGENTIC-PATTERNS-COMPANION.md  AGENTIC-PATTERNS-GUIDE.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_NOTES.md  LICENSE  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
agentic_patterns/: __init__.py  common.py  kernel.py  providers.py
agentic_patterns/adapters/: __init__.py  _optional.py  langchain_bridge.py  langgraph_bridge.py
agentic_patterns/demos/: __init__.py  helpdesk.py  press_release.py  recipe_pipeline.py
chat/: __init__.py  embeddings.py  ingest.py  llm.py  main.py  patterns.py  rag.py  redis_cache.py
chat/static/: app.js  index.html  style.css
code/01_prompt_chaining/: main.py
code/02_routing/: main.py
code/03_parallelization/: main.py
code/04_reflection/: main.py
code/05_tool_use/: main.py
code/06_planning/: main.py
code/07_multi_agent/: main.py
code/08_memory_management/: main.py
code/09_learning_adaptation/: main.py
code/10_mcp/: main.py
code/11_goal_monitoring/: main.py
code/12_exception_handling/: main.py
code/13_human_in_the_loop/: main.py
code/14_rag/: main.py
code/15_inter_agent_communication/: main.py
code/16_resource_optimization/: main.py
code/17_reasoning/: main.py
docs/: demo-chat-app-meta.json  index.md  introduction.md
examples/: langchain_recipe_pipeline.py  langgraph_helpdesk_router.py  langgraph_incident_crew.py  langgraph_reflection_loop.py
scripts/: build-companion-doc.py  build-guide-doc.py  docker-entrypoint.sh  record-chat-demo.py
tests/: test_chat.py  test_examples.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_rag.py
(+28 files in other folders)
