[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-patterns"
version = "0.1.0"
description = "Reference implementations for 21 agentic design patterns"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_patterns*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
